solved ticket: https://jira.jboss.org/browse/RAILO-934